--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,16 @@
-<!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>ContactsList</title>
-  <base href="/">
-
+  <title>Записная Книга</title>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Bootstrap core CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <!-- Custom styles for this template -->
+  <link href="http://www.blacktie.co/demo/solid/assets/css/style.css" rel="stylesheet">
+  <link href="http://www.blacktie.co/demo/solid/assets/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+<base href="/">
+<app-root>Загрузка...</app-root>
 </body>
 </html>
